myextranet.deploy/base/ingress/myextranet-errorpages-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: errorpages-deployment
spec:
  selector:
    matchLabels:
      app: errorpages
  replicas: 1
  template:
    metadata:
      labels:
        app: errorpages
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: errorpages
          mountPath: /usr/share/nginx/html
        - name: errorpages-config
          mountPath: /etc/nginx/conf.d
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 30

      volumes:
      - name: errorpages
        configMap:
          name: errorpages
          items: 
          - key: myextranet-error.html
            path: 50x.html
      - name: errorpages-config
        configMap:
          name: myextranet-errorpages-nginx-config
