myextranet.deploy/base/ingress/myextranet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myextranet-ingress
  annotations:
    nginx.ingress.kubernetes.io/custom-http-errors: "502,503"
    nginx.ingress.kubernetes.io/default-backend: errorpages
    nginx.ingress.kubernetes.io/app-root: /myextranet/utente
spec:
  defaultBackend:
    service:
      name: errorpages
      port:
        number: __YOUR_DATA__
  rules:
    - host: myextranet
      http:
        paths:
          - backend:
              service:
                name: myextranet
                port: 
                  number: __YOUR_DATA__
            path: /
            pathType: Prefix
